Fix logn button shift fix

--- a/src/components/LogInButton/LogInButton.css
+++ b/src/components/LogInButton/LogInButton.css
@@ -23,7 +23,7 @@
   }
   &:active {
     top: calc(1rem + 5px);
-    left: calc(1rem + 5px);
+    right: calc(1rem + 5px);
     box-shadow: none;
   }
 }
